Z-index .button (ressponsive issue)

--- a/Style.css
+++ b/Style.css
@@ -1,7 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Orbitron&display=swap");
-* {
-  cursor: none;
-}
+
 body,
 html {
   margin: 0;
@@ -39,12 +37,15 @@ html {
 .button {
   position: absolute;
   width: 50px;
-  height: 20px;
+  height: 30px;
   top: calc(100vh - 92%);
   left: calc(100vw - 52%);
-  z-index: 4;
+  z-index: 6;
   opacity: 0;
   transition: opacity 1s;
+  display: block;
+  justify-content: center;
+  align-items: center;
 }
 .buttonC {
   position: relative;
@@ -136,7 +137,7 @@ html {
   transition: 1s;
   font-family: "Orbitron";
   font-size: 70px;
-  font-weight: 450;
+  font-weight: 400;
   cursor: none;
   position: relative;
   overflow: hidden;
